# salmon

./: Cargo.toml  LICENSE  README.md
parser/: Cargo.toml
parser/benches/: lexer_parser.rs
parser/src/: importer.rs  lexer.rs  lib.rs  parser.rs  resolver.rs  types.rs
salmonc/: Cargo.toml
salmonc/src/: changes.rs  compiler.rs  lambda_lifting.rs  main.rs
salmonc/tests/: anonymous_function.sa  anonymous_function.sa.err  anonymous_function.sa.out  array.sa  array.sa.err  array.sa.out  block.sa  block.sa.err  block.sa.out  block_scope.sa.err  classes.sa  classes.sa.err  classes.sa.out  closure.sa  closure.sa.err  comparision.sa  comparision.sa.err  comparision.sa.out  constructor.sa  constructor.sa.err  for.sa  for.sa.err  function.sa  function.sa.err  function.sa.out  globals.sa  globals.sa.err  implicit_this.sa  implicit_this.sa.err  implicit_this.sa.out  inheritance.sa  inheritance.sa.err  inheritance.sa.out  istype.sa  istype.sa.err  istype.sa.out  logical.sa  logical.sa.err  logical.sa.out  math.sa  (+31 more)
tree-walk-interpreter/: Cargo.toml
tree-walk-interpreter/benches/: all.rs  fibonacci.rs
tree-walk-interpreter/src/: class.rs  function.rs  interpreter.rs  lib.rs  main.rs  state.rs  value.rs
tree-walk-interpreter/tests/: and.lox  and.lox.out  array.lox  array.lox.out  block.lox  block.lox.err  block.sa  block.sa.err  block.sa.out  break.sa  break.sa.out  break_error.lox.err  break_error.sa.err  circular.sa  circular.sa.err  class.lox  class.lox.err  class.lox.out  classes.sa.err  constructor.lox  duplicated_local.lox.err  duplicated_local.sa.err  errors.lox.err  (+47 more)
(+3 files in other folders)
