[package]
name = "parser"
version = "0.1.0"
authors = ["Agustin Chiappe Berrini <agustin@chiappeberrini.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lexer_parser"
harness = false
