[package]
name = "salmonc"
version = "0.1.0"
authors = ["Agustin Chiappe Berrini <agustin@chiappeberrini.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.3.2"
failure = "0.1.5"
parser = { path = "../parser" }
smoked = { path = "../../emulators/smoked" }
